[gd_scene load_steps=9 format=3 uid="uid://dl8rc8ryu850g"]

[ext_resource type="Script" path="res://scripts/Entity.gd" id="1_hn5vx"]
[ext_resource type="Texture2D" uid="uid://wf2wxgguxpf3" path="res://src/sprites/levellabel.png" id="2_57mqj"]
[ext_resource type="FontFile" uid="uid://cwp7h6bubwify" path="res://src/assets/fonts/visitor-brk/visitor1.ttf" id="3_jjtf8"]
[ext_resource type="Texture2D" uid="uid://ldanhp1iacqk" path="res://src/sprites/healthlabel.png" id="4_srrrc"]
[ext_resource type="Texture2D" uid="uid://gsv8yho6nxie" path="res://src/sprites/healthlabel_progress.png" id="5_surlc"]
[ext_resource type="AudioStream" uid="uid://dyn0jku8dkoqw" path="res://sounds/walk.mp3" id="6_eqdc8"]
[ext_resource type="Script" path="res://scripts/HINT.gd" id="7_juws1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6vtff"]
radius = 5.5

[node name="Entity" type="CharacterBody2D" groups=["entity"]]
script = ExtResource("1_hn5vx")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6vtff")

[node name="Mirror" type="Node2D" parent="."]

[node name="Weapon" type="Node2D" parent="Mirror"]

[node name="UpdateTargetPosition" type="Timer" parent="."]
wait_time = 0.1

[node name="Regenerate" type="Timer" parent="."]

[node name="UpdateTargets" type="Timer" parent="."]
wait_time = 0.5

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 1, 1, 0.027451)

[node name="EntityLabel" type="Control" parent="."]
z_index = 10
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -12.0
offset_right = -5.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level" type="TextureRect" parent="EntityLabel"]
layout_mode = 0
offset_left = -7.0
offset_top = -5.0
offset_right = 2.0
offset_bottom = 4.0
texture = ExtResource("2_57mqj")

[node name="Label" type="Label" parent="EntityLabel/Level"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.611
anchor_top = 0.5
anchor_right = 0.611
anchor_bottom = 0.5
offset_left = -3.499
offset_top = -4.5
offset_right = 3.501
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jjtf8")
theme_override_font_sizes/font_size = 10
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health" type="TextureProgressBar" parent="EntityLabel/Level"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -2.5
offset_right = 24.0
offset_bottom = 2.5
grow_vertical = 2
pivot_offset = Vector2(0, 2)
value = 100.0
texture_under = ExtResource("4_srrrc")
texture_progress = ExtResource("5_surlc")
texture_progress_offset = Vector2(1, 1)

[node name="DEBUG" type="Label" parent="."]
visible = false
offset_left = -30.0
offset_top = -40.0
offset_right = 56.0
offset_bottom = -17.0
scale = Vector2(0.505, 0.505)
text = "DEBUG"

[node name="Walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_eqdc8")
volume_db = 0.3

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="HINT" type="Control" parent="CanvasLayer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -320.0
offset_right = -380.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
mouse_filter = 1
script = ExtResource("7_juws1")

[node name="Panel" type="Panel" parent="CanvasLayer/HINT"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="UpdateHint" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="UpdateTargetPosition" to="." method="_on_update_target_position_timeout"]
[connection signal="timeout" from="Regenerate" to="." method="_on_regenerate_timeout"]
[connection signal="timeout" from="UpdateTargets" to="." method="_on_update_targets_timeout"]
[connection signal="timeout" from="UpdateHint" to="." method="_on_update_hint_timeout"]
